<resources>
    <string name="app_name">极致驾服</string>
    <string name="school">黑猫驾校</string>
    <string name="phonenumber">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">找回密码</string>
    <string name="register_account">立即注册</string>
    <string name="look_around">随便看看 </string>
    <string name="myapply1">我的投诉</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="auth_code">验证码</string>
    <string name="send_auth_code">发送验证码</string>
    <string name="more_send_auth_code">再次发送验证码</string>
    <string name="invitation_code">输入邀请码将获取奖励</string>
    <string name="protocol">我同意《用户服务协议》</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="finish">提交</string>
    <string name="ok">完成</string>
    <string name="change_password">更改密码</string>
    <string name="find_password">找回密码</string>
    <string name="next_step">下一步</string>
    <string name="surplus">剩余</string>
    <string name="coach">教练</string>
    <string name="distance">距离</string>
    <string name="grade">评分</string>
    <string name="wallet_coupons">兑换劵</string>
    <string name="wallet_integral">积分</string>
    <string name="wallet_money">现金</string>
    <string name="coach_list">教练列表</string>
    <string name="coach_detail">教练详情</string>
    <string name="select_school">附近驾校</string>
    <string name="search_coach">搜索教练</string>
    <string name="school_detail">驾校详情</string>
    <string name="enroll">报名</string>
    <string name="enroll_success_title">报名成功</string>
    <string name="go_and_see">再去看看</string>
    <string name="enroll_again">重新报名</string>
    <string name="yibu_favourable_class">一步特色班</string>
    <string name="yibu_procedure">合作驾校</string>
    <string name="yibu_superiority">平台优势</string>
    <string name="yibu_student_know">学员须知</string>
    <string name="enroll_info_table">报名</string>
    <string name="apply_left">投诉</string>
    <string name="apply_left_coach">投诉教练</string>
    <string name="apply_left_school">投诉驾校名</string>
    <string name="in_uploading">正在上传</string>
    <string name="commit">提交</string>
    <string name="real_name">真实姓名</string>
    <string name="idcard">身份证号</string>
    <string name="testcode">验证码</string>
    <string name="contact">联系方式</string>
    <string name="address">常用地址</string>
    <string name="enroll_school">报考驾校</string>
    <string name="enroll_carstyle">驾照类型</string>
    <string name="enroll_coach">报考教练</string>
    <string name="enroll_class">班级类型</string>
    <string name="enroll_success">报名资料提交成功，我们会有业务专员联系您帮助您报名。</string>
    <string name="we_contact_yout">报名成功之后，欢迎您继续体验我们精心为您设计的预约练车功能。</string>
    <string name="document_presentation">准备材料说明</string>
    <string name="idcard_copy">身份证反正面复印件</string>
    <string name="photos">2张4寸白底免冠照片</string>
    <string name="car">小车</string>
    <string name="truck">货车</string>
    <string name="bus">客车</string>
    <string name="shuttle">接送</string>
    <string name="general">全科</string>
    <string name="coach_info">教练信息</string>
    <string name="coach_course_info">授课信息</string>
    <string name="ex_place">练车场地:</string>
    <string name="coach_shuttle">接        送:</string>
    <string name="coach_seniority">教        龄:</string>
    <string name="coach_worktime">工作时间:</string>
    <string name="coach_in_school_name">所属驾校:</string>
    <string name="coach_course">授课科目:</string>
    <string name="personality_label">个性标签:</string>
    <string name="self_evaluation">个人说明</string>
    <string name="student_evaluation">学员评价</string>
    <string name="school_info">驾校信息</string>
    <string name="success_rate">通  过  率:</string>
    <string name="work_time">营业时间:</string>
    <string name="school_instruction">驾校简介</string>
    <string name="bus_route">班车路线</string>
    <string name="training_ground">训练场</string>
    <string name="select_coach">选择教练</string>
    <string name="my_appointment">我的预约</string>
    <string name="today_appointment">今日预约</string>
    <string name="sign_in">签到</string>
    <string name="appointment_car">预约学车</string>
    <string name="appointment_course">课件</string>
    <string name="wallet">钱包</string>
    <string name="message">消息</string>
    <string name="my">我的</string>
    <string name="course1">科目一</string>
    <string name="course2">科目二</string>
    <string name="course3">科目三</string>
    <string name="course4">科目四</string>
    <string name="student_number">学号</string>
    <string name="exam_number">准考证号</string>
    <string name="enroll_vertify">报名验证</string>
    <string name="more_coach">更多教练</string>
    <string name="shuttle_address">接送地址</string>
    <string name="change_shuttle_address">修改接送地址</string>
    <string name="history_shuttle_address">历史接送地址</string>
    <string name="clock_one">08:00</string>
    <string name="clock_two">09:00</string>
    <string name="clock_three">10:00</string>
    <string name="clock_four">11:00</string>
    <string name="clock_five">12:00</string>
    <string name="clock_six">15:00</string>
    <string name="clock_seven">16:00</string>
    <string name="clock_eight">17:00</string>
    <string name="clock_nine">18:00</string>
    <string name="clock_ten">19:00</string>
    <string name="end">结束</string>
    <string name="my_favourite">我的喜欢</string>
    <string name="my_coach">我的教练</string>
    <string name="my_code">Y码劵</string>
    <string name="setting">设置</string>
    <string name="setting_help">使用帮助</string>
    <string name="help_guide">使用指南</string>
    <string name="help_exam">理论考试</string>
    <string name="help_newcomer">新手上路</string>
    <string name="help_problem">常见问题</string>
     <string name="exam_result">考试结果</string>
    <string name="enroll_detail">报名详情</string>
     <string name="enroll_infor">报名信息</string>
    <string name="testing_detail">验证报名信息</string>
    <string name="logout">退出登录</string>
    <string name="person_center">个人中心</string>
    <string name="indent_detail">订单详情</string>
    <string name="testing_person_center">验证报名信息</string>
    <string name="eidt_info">编辑信息</string>
    <string name="headpic">头像</string>
    <string name="gender">性别</string>
    <string name="personal_sign">个性签名</string>
    <string name="tie_phone">绑定手机</string>
    <string name="change_tie_phone">修改绑定手机</string>
    <string name="new_phonenumber">新手机号</string>
    <string name="no_favourite_coach">小布还没有找到您喜欢的教练</string>
    <string name="no_favourite_school">小布还没有找到您喜欢的驾校</string>
    <string name="appointment_tip">预约提醒</string>
    <string name="new_message_tip">新消息通知</string>
    <string name="about_us">关于我们</string>
    <string name="set_rate">去评分</string>
    <string name="callback">反馈</string>
    <string name="section">章节选择</string>
    <string name="integra">赚积分</string>
    <string name="money_record">提现记录</string>
    <string name="user_record">使用记录</string>
     <string name="activitys">活动</string>
    <string name="opinions_suggestions">请留下宝贵的意见和建议</string>
    <string name="attitude_school">做有态度的驾校培训</string>
    <string name="allow_protocol">许可服务协议</string>
    <string name="copy_right">Copyright All Rights Resrved</string>
    <string name="cancel_appointment">取消预约</string>
    <string name="sametime_student">同时段学员</string>
    <string name="confirm_study">确定学完</string>
    <string name="complain">投诉</string>
    <string name="complains">我的投诉</string>
    <string name="comment">评价</string>
    <string name="course_info">课程信息</string>
    <string name="total_comment">总体评价</string>
    <string name="cancel_reason">取消原因</string>
    <string name="complain_reason">投诉原因</string>
    <string name="cancel_1">临时有事无法参加</string>
    <string name="cancel_2">预约错教练</string>
    <string name="cancel_3">暂时不参加驾照自考</string>
    <string name="cancel_4">其他</string>
    <string name="complain_1">教学态度差，语气重</string>
    <string name="complain_2">教学质量差</string>
    <string name="complain_3">教练车卫生差</string>
    <string name="complain_4">其他</string>
    <string name="requirements">报考</string>
    <string name="cancel_appointment_instro">取消预约说明</string>
    <string name="write_comment">写点评论吧</string>
    <string name="student_car">学车信息</string>
    <string name="enroll_school_colon">报考驾校:</string>
    <string name="car_style_colon">车        型:</string>
    <string name="car_progress">学车进度:</string>
    <string name="address_colon">常用地址:</string>
    <string name="caoch_comment">教练评论</string>
    <string name="student_detail">学员详情</string>
    <string name="appointment_time_incontinuity">预约时间不连续</string>
    <string name="select_right_driveing_school">请选择您报名的驾校下的教练</string>
    <string name="driveing_school_error">教练不正确</string>
    <string name="appointment_time_separate">请分两次预约</string>
    <string name="appointment_time_success">预约提交成功</string>
    <string name="coach_confirm_appointment_time">教练会对所预约课程确定</string>
    <string name="send">发送</string>
    <string name="change_shopping">兑换商品</string>
    <string name="my_wallet">我的积分</string>
    <string name="my_cupon">商城兑换券</string>
    <string name="my_amount">可取现金额</string>
    <string name="amount">现金</string>
    <string name="my_change">YB</string>
    <string name="invite_friends">分享好友</string>
    <string name="share">分享</string>
    <string name="save">保存</string>
    <string name="comit">提交</string>
    <string name="exchange">兑换券兑换</string>
    <string name="deal_detail">交易详情</string>
    <string name="share_income">分享收益</string>
    <string name="invite_friends_get_bonus">分享好友得现金</string>
    <string name="invite_success_income">成功分享 月月入利</string>
    <string name="send_invite">发出邀请：</string>
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="duanxin">短信</string>
     <string name="weixin_circle">朋友圈</string>
    <string name="nocoach">暂无教练</string>
    <string name="five_coach_shuttle">5KM内可接送</string>
    <string name="no_comment">暂无评论</string>
    <string name="simple_sign">一句话签名</string>
 <string name="change_name">修改姓名</string>
    <string name="change_nickname">修改昵称</string>
    <string name="change_personalized">修改个性签名</string>
    <string name="change_headpic">更换头像</string>
    <string name="appointment">预约</string>
    <string name="input_shuttle_address">输入接送地址</string>
    <string name="no_coach">没有教练</string>
    <string name="appointment_detail">预约详情</string>
    <string name="question_bank">题库</string>
    <string name="mock_examination">模考</string>
    <string name="my_mistakes">我的错题</string>
    <string name="verifying">正在审核中…</string>
    <string name="coach_card">教练卡</string>
    <string name="school_card">驾校卡</string>
    <string name="belongto_school">所在驾校</string>
	<string name="good_name">商品名称</string>
	<string name="exchange_jifen">兑换积分</string>
    <string name="exchange_express">配送方式</string>
    <string name="exchange_address">邮寄地址</string>
    <string name="exchange_receiver_name">收货人姓名</string>
    <string name="exchange_phone">联系电话</string>
    <string name="exchange_time">下单时间</string>
    <string name="exchange_type">兑换方式</string>
    <string name="exchange_money">兑换金额</string>
     <string name="school_appointment">驾校代约</string>
     <string name="appointment_exam_instructions">自主约考说明</string>
     <string name="appointment_exam_introduce">根据中华人民共和国公安部令第139号文件，学员可以自主选择考试场地、考试时间、考试场次提出考试预约申请。在停止接受考试预约申请前，学员可以在互联网办理取消预约。在预约结果公布时间当天，该考试计划将在互联网上截止预约。（由于该系统在全国各地的推进进度不同，可能有部分地区暂时不支持自主约考，请选择驾校代约）</string>
     <string name="appointment_exam_process">学员登录122.gov.cn，点击【驾驶证业务】→【考试预约】业务功能办理。</string>
     <string name="appointment_exam_process_instructions">业务流程及操作说明</string>
     <string name="appointment_exam_process_introduce">【业务须知】→ 【确认信息】→ 【考试预约】→ 【选择日期和场次】→ 【确认提交】→ 【完成提交】</string>
     <string name="appointment_exam_result">提交成功后，系统生成业务流水号，学员根据该业务流水号可以在网办进度中查询该流水的预约受理状态。系统将在预约结果公示时间当天安排考试，学员可以通过网办进度、驾驶人考试预约结果公布、短信及时获取预约结果。</string>
</resources>