<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp" >

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="30dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_exam_instructions"
                android:textColor="@color/new_app_main_color"
                android:textSize="@dimen/txt_size_middle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/appointment_exam_introduce"
                android:textColor="@color/text_color_light"
                android:textSize="@dimen/txt_size_middle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/appointment_exam_process"
                android:textColor="@color/text_color_dark"
                android:textSize="@dimen/txt_size_middle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/appointment_exam_process_instructions"
                android:textColor="@color/new_button_color"
                android:textSize="@dimen/txt_size_middle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/appointment_exam_process_introduce"
                android:textColor="@color/new_button_color"
                android:textSize="@dimen/txt_size_middle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/appointment_exam_result"
                android:textColor="@color/text_color_light"
                android:textSize="@dimen/txt_size_middle" />
            
         
        </LinearLayout>
    </ScrollView>

       <Button
        android:id="@+id/school_appintment_exam"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/school_appointment"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_middle" />

</LinearLayout>