<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/register_registerlayout_paddingleftright"
    android:paddingRight="@dimen/register_registerlayout_paddingleftright"
    android:background="#00000000"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/changepass_password_et"
        style="@style/changepass_password_et_style"
        android:layout_marginTop="15dp"
        android:hint="@string/new_password" />

    <EditText
        android:id="@+id/changepass_conpass_et"
        style="@style/changepass_password_et_style"
        android:hint="@string/confirm_new_password" />

    <Button
        android:id="@+id/changepass_finish_btn"
        style="@style/btn_style"
        android:layout_marginTop="@dimen/changepass_finish_btn_margintop"
        android:text="@string/finish" />

</LinearLayout>