<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00000000" >

    <LinearLayout
        android:id="@+id/enroll_success_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/appointment_success"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/enroll_success"
            android:textColor="#333333"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="28dp"
            android:text="@string/we_contact_yout"
            android:textColor="#999999"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enroll_success_document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enroll_success_layout"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="13dp"
        android:paddingLeft="20dp"
        android:paddingTop="13dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_presentation"
            android:textColor="#333333"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/idcard_copy"
            android:textColor="#999999"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/photos"
            android:textColor="#999999"
            android:textSize="14dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/enroll_success_document"
        android:background="#eeeeee" />

</RelativeLayout>